[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font/GlacialIndifference-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/userinterface/Highscore.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 5
outline_color = Color( 0.752941, 0.188235, 0.188235, 1 )
extra_spacing_char = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[node name="Highscore_Container" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ColorRect" parent="BlackOverlay"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 1395.82, -136.361 )
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="BlackOverlay"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_left = -0.663391
margin_top = -0.307373
margin_right = -0.663391
margin_bottom = -0.307373
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLabel" type="Label" parent="BlackOverlay/Background"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
custom_fonts/font = SubResource( 1 )
text = "Highscores"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scorelist" type="Control" parent="BlackOverlay/Background"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1st" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_bottom = 0.15
margin_right = 40.0
custom_fonts/font = SubResource( 2 )
text = "1."
valign = 1

[node name="One_Name" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_right = 0.6
anchor_bottom = 0.15
margin_left = 50.0
custom_fonts/font = SubResource( 2 )
text = "First Place"
valign = 1

[node name="One_Score" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.15
custom_fonts/font = SubResource( 2 )
text = "30"
align = 2
valign = 1

[node name="ColorRect" type="ColorRect" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.16
anchor_right = 1.0
anchor_bottom = 0.16
margin_bottom = 4.0
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2nd" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.2
anchor_bottom = 0.35
margin_right = 40.0
custom_fonts/font = SubResource( 2 )
text = "2."
valign = 1

[node name="Two_Name" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.35
margin_left = 50.0
custom_fonts/font = SubResource( 2 )
text = "Second Place"
valign = 1

[node name="Two_Score" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_left = 0.7
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.35
custom_fonts/font = SubResource( 2 )
text = "25"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.36
anchor_right = 1.0
anchor_bottom = 0.36
margin_top = -3.8147e-06
margin_bottom = 4.0
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3rd" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.4
anchor_bottom = 0.55
margin_right = 40.0
custom_fonts/font = SubResource( 2 )
text = "3."
valign = 1

[node name="Three_Name" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.55
margin_left = 50.0
custom_fonts/font = SubResource( 2 )
text = "Third Place"
valign = 1

[node name="Three_Score" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_left = 0.7
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.55
custom_fonts/font = SubResource( 2 )
text = "20"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.56
anchor_right = 1.0
anchor_bottom = 0.56
margin_top = 7.62939e-06
margin_bottom = 4.00002
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4th" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.6
anchor_bottom = 0.75
margin_right = 40.0
custom_fonts/font = SubResource( 2 )
text = "4."
valign = 1

[node name="Four_Name" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.75
margin_left = 50.0
custom_fonts/font = SubResource( 2 )
text = "Fourth Place"
valign = 1

[node name="Four_Score" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_left = 0.7
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.75
custom_fonts/font = SubResource( 2 )
text = "15"
align = 2
valign = 1

[node name="ColorRect4" type="ColorRect" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.76
anchor_right = 1.0
anchor_bottom = 0.76
margin_bottom = 4.00002
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5th" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.8
anchor_bottom = 0.95
margin_right = 40.0
custom_fonts/font = SubResource( 2 )
text = "5."
valign = 1

[node name="Five_Name" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 0.95
margin_left = 50.0
custom_fonts/font = SubResource( 2 )
text = "Fifth Place"
valign = 1

[node name="Five_Score" type="Label" parent="BlackOverlay/Background/Scorelist"]
anchor_left = 0.7
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 0.95
custom_fonts/font = SubResource( 2 )
text = "10"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="BlackOverlay/Background/Scorelist"]
anchor_top = 0.96
anchor_right = 1.0
anchor_bottom = 0.96
margin_bottom = 4.00002
color = Color( 1, 1, 1, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="BlackOverlay/Background"]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_Player" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="BlackOverlay/Background/Cancel" to="." method="_toggle_open"]
